@@ -25,6 +25,10 @@ lib/SPVM/Net/SSLeay/Constant.c
 lib/SPVM/Net/SSLeay/Constant.config
 lib/SPVM/Net/SSLeay/Constant.pm
 lib/SPVM/Net/SSLeay/Constant.spvm
+lib/SPVM/Net/SSLeay/DER.c
+lib/SPVM/Net/SSLeay/DER.config
+lib/SPVM/Net/SSLeay/DER.pm
+lib/SPVM/Net/SSLeay/DER.spvm
 lib/SPVM/Net/SSLeay/DH.c
 lib/SPVM/Net/SSLeay/DH.config
 lib/SPVM/Net/SSLeay/DH.pm
