@@ -87,6 +87,7 @@ sub MY::postamble {
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::EVP_PKEY');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::ASN1_OBJECT');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::OBJ');
+    $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::DER');
   }
   
   return $make_rule;
