@@ -1,0 +1,36 @@
+package SPVM::Net::SSLeay::DER;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::DER - Name Space for d2i_ and i2d_ prefixed functions in OpenSSL.
+
+=head1 Description
+
+Net::SSLeay::DER class in L<SPVM> represents a name space for L<d2i_ and i2d_ prefixed functions|https://docs.openssl.org/master/man3/d2i_X509> in OpenSSL.
+
+=head1 Usage
+
+  use Net::SSLeay::DER;
+
+=head1 Class Methods
+
+
+
+=head1 See Also
+
+=over 2
+
+=item * L<Net::SSLeay|SPVM::Net::SSLeay>
+
+=back
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
